--- a/style.css
+++ b/style.css
@@ -25,18 +25,19 @@ h3{
 }
 
 .board {
-    background: rgb(31, 27, 27);
-    /* border: 1px solid black; */
+    /* background: rgb(31, 27, 27); */
+    border: 2px solid black;
     display: grid;
     grid-template-columns: repeat(8, minmax(0, 1fr));
-    padding: 10px 10px;
+    /* padding: 10px 10px; */
 }
 
 .square {
     /* border:1px solid black; */
+    
     display: flex;
-    height: 10vh;
-    width: 6vw;
+    height: 5.5vw;
+    width: 5.5vw;
     align-items: center;
     justify-content: center;
     font-size: 80px;
@@ -80,10 +81,31 @@ h3{
     width: 100%;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1300px) {
+    body{
+        margin: 0;
+    }
     .square {
-        
-        height: 8vh;
-        width: 10vw;
+        /* padding: 0; */
+        margin: 0%;
+        height: 7vw;
+        width: 7vw;
+    }
+  }
+@media only screen and (max-width: 600px) {
+    body{
+        margin: 0;
+    }
+    .square {
+        /* padding: 0;
+        margin: 0%; */
+        height: 12.5vw;
+        width: 12.5vw;
+    }
+
+    .body2{
+        display: block;
+        width: 100vw;
+        /* margin: 2vw; */
     }
   }
