--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ h3{
         width: 7vw;
     }
   }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
     body{
         margin: 0;
     }
@@ -105,6 +105,11 @@ h3{
 
     .body2{
         display: block;
+        width: 100vw;
+        /* margin: 2vw; */
+    }
+    .body{
+        /* display: block; */
         width: 100vw;
         /* margin: 2vw; */
     }
