--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     color: black;
     font-size: 2vh;
     border: 1px solid rgb(2, 138, 118);
-    margin: 4vw;
+    margin: 4vh;
     /* padding: 2vh; */
 }
 h3{
@@ -16,8 +16,14 @@ h3{
     margin: 5px 5px;
     
 }
-
-.body, .head {
+ .head{
+    display: flex;
+    /* height: 100vh; */
+    align-items: center;
+    justify-content: center;
+    /* padding-bottom: 5vh; */
+ }
+.body{
     display: flex;
     /* height: 100vh; */
     align-items: center;
