--- a/style.css
+++ b/style.css
@@ -1,12 +1,21 @@
 .btn{
-    padding: 1vw;
+    padding: 0.7vw;
     border-radius: 1vh;
-    background: rgb(1, 181, 55);
-    color: black;
+    background: #82b64d;
+    color: rgb(255, 255, 255);
     font-size: 2vh;
-    border: 1px solid rgb(2, 138, 118);
-    margin: 4vh;
+    font-weight: bold;
+    border: none;
+    margin-inline: 4vh;
     /* padding: 2vh; */
+}
+body{
+    margin: 0;
+}
+.btn:hover{
+    cursor: pointer;
+    background: #78ae41;
+    
 }
 h3{
     font-size:xx-large;
@@ -58,15 +67,19 @@ h3{
     /* cursor: pointer; */
     content: "";
     position: absolute;
-    z-index: 3;
+    /* z-index: 3; */
     background: inherit;
     opacity: 0.5;
     width: 50%;
     height: 50%;
     border-radius: 50%;
-    filter: brightness(0.9);   
+    filter: brightness(0.6);   
 }
-
+.bg-color{
+    /* border: 1px solid black; */
+    background-color: #f1ef5d !important; 
+    /* z-index: 1; */
+}  
 .dark {
     background: #779a54;
     /* background: rgb(120 53 0); */
@@ -77,13 +90,48 @@ h3{
 
 .light {
     background: #e9eecc;
+    z-index: 0;
     /* background: rgb(252 255 209); */
 }
 
 
+/* //win   f5f68a*/
 
+#check {
+    position: relative;
+    background-color: #f00404;
+    border-radius: 1vw;
+    right: 1vw;
+    color: #ffffff;
+    font-size: 1vw;
+    display: none;
+    z-index: 1000; /* Ensure it appears above other elements */
+    padding: 0.5vw;
+}
+#notification {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 15vw;
+    height: 15vw;
+    background-color: #262421;
+    color: #ffffff;
+    border-radius: 1vw;
+    font-size: 2vw;
+    margin: 100%;
+    display: none;
+    z-index: 1000; /* Ensure it appears above other elements */
+}
 
+.hidden {
+    display: none;
+}
 
+#msg{
+    display: flex;
+    justify-content: center;
+}
 
 
 
@@ -99,6 +147,17 @@ h3{
     width: 100%;
 }
 
+
+
+
+
+
+
+
+
+
+
+
 @media only screen and (max-width: 1300px) {
     body{
         margin: 0;
@@ -109,7 +168,31 @@ h3{
         height: 7vw;
         width: 7vw;
     }
-  }
+
+    #notification {
+        margin: auto;
+        width: 22vw;
+        height: 22vw;
+        border-radius: 1.4vw;
+        font-size: 2.5vw;
+    }
+
+    .btn{
+        padding: 1vw;
+        border-radius: 1.4vh;
+        font-size: 1.5vw;
+        font-weight: bold;
+        border: none;
+        margin-inline: 4vh;
+    }
+
+    #check {
+        border-radius: 1.7vw;
+        right: 1.7vw;
+        font-size: 1.7vw;
+        padding: 0.7vw;
+    }
+}
 @media only screen and (max-width: 700px) {
     body{
         margin: 0;
@@ -120,23 +203,65 @@ h3{
         height: 12.5vw;
         width: 12.5vw;
     }
-
+    
     .body2{
-        display: block;
+        display: grid;
         width: 100vw;
         /* margin: 2vw; */
+    }
+    #notification {
+        /* margin-left: auto; */
+        width: 40vw;
+        height: 40vw;
+        left:32vw;
+        border-radius: 3vw;
+        font-size: 5.5vw;
+    }
+    
+    #check {
+        border-radius: 2vw;
+        right: 2vw;
+        font-size: 2vw;
+        padding: 2vw;
+    }
+
+    .btn{
+        padding: 2.5vw;
+        border-radius: 1.4vh;
+        font-size: 2vw;
+        font-weight: bold;
+        border: none;
+        margin-inline: 4vh;
     }
 
 
 }
 @media only screen and (max-width: 390px) {
+    h3{
+        font-size: 9vw;
+    }
+    .btn{
+        padding: 2.5vw;
+        border-radius: 1.4vh;
+        font-size: 3vw;
+        font-weight: bold;
+        border: none;
+        margin-inline: 4vh;
+    }
     .head{
-        /* display: block; */
+        display: gird;
         width: 100vw;
         height: 20vw;
         /* align-items:normal; */
-        justify-content:stretch;
+        /* justify-content:stretch; */
         font-size: 4vw;
         /* margin: 2vw; */
+    }
+
+    #check {
+        border-radius: 2vw;
+        right: 2vw;
+        font-size: 2vw;
+        padding: 2vw;
     }
 }
